add new features

--- a/MeWSync/app/src/main/AndroidManifest.xml
+++ b/MeWSync/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.mewhpm.mewsync">
 
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -16,6 +18,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <service
+                android:name=".services.BleService"
+                android:enabled="true"
+                android:exported="false"/>
+
+        <service
+                android:name=".services.BleDiscoveryService"
+                android:enabled="true"
+                android:exported="false"/>
+
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
