--- a/MeWSync/app/build.gradle
+++ b/MeWSync/app/build.gradle
@@ -32,15 +32,21 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
 
     implementation "org.jetbrains.anko:anko:0.10.8"
-    implementation "org.jetbrains.anko:anko-commons:0.10.8"
-    implementation "org.jetbrains.anko:anko-design:0.10.8"
+//    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+//    implementation "org.jetbrains.anko:anko-design:0.10.8"
 
+    // ORM & DB
+    implementation 'com.j256.ormlite:ormlite-android:5.1'
+
+    // LOAD ANIMATIONS
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 
+    // ICONS
     implementation 'ru.ztrap.iconics:core-ktx:1.0.3'
     implementation 'ru.ztrap.iconics:views-ktx:1.0.3'
     implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
 
+    // TESTS
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
