--- a/MeWSync/app/src/main/AndroidManifest.xml
+++ b/MeWSync/app/src/main/AndroidManifest.xml
@@ -27,6 +27,19 @@
                   android:theme="@style/DeviceActivityTheme"
                   android:label="@string/app_name">
         </activity>
+        <activity android:name=".InitialActivity"
+                  android:theme="@style/AppTheme.NoActionBar"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <service
                 android:name=".services.BleService"
@@ -36,16 +49,6 @@
                 android:name=".services.BleDiscoveryService"
                 android:enabled="true"
                 android:exported="false"/>
-
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
