--- a/MeWSync/app/build.gradle
+++ b/MeWSync/app/build.gradle
@@ -43,29 +43,22 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
-
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
-    implementation "org.jetbrains.anko:anko:0.10.8"
-//    implementation "org.jetbrains.anko:anko-commons:0.10.8"
-//    implementation "org.jetbrains.anko:anko-design:0.10.8"
-
+    implementation 'org.jetbrains.anko:anko:0.10.8'
+    //    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+    //    implementation "org.jetbrains.anko:anko-design:0.10.8"
     // ORM & DB
     implementation 'com.j256.ormlite:ormlite-android:5.1'
-
     // LOAD ANIMATIONS
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
-
     // DIALOGS
     implementation 'com.afollestad.material-dialogs:core:2.0.0'
     implementation 'com.afollestad.material-dialogs:input:2.0.0'
-
     // ICONS
     implementation 'ru.ztrap.iconics:core-ktx:1.0.3'
     implementation 'ru.ztrap.iconics:views-ktx:1.0.3'
     implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
-
     // TESTS
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
