--- a/MeWSync/app/build.gradle
+++ b/MeWSync/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.protobuf'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+def protobufGeneratedSource = new File("$buildDir/generated/source/proto/debug/javalite/")
+def protobufGeneratedDestination = new File("$projectDir/src/main/java/com/mewhpm/mewsync/data/generated/")
 
 android {
     compileSdkVersion 28
@@ -21,6 +25,10 @@ android {
     }
     sourceSets {
         main {
+            proto {
+                srcDir 'src/main/protobuf'
+            }
+            java.srcDirs += "${protobuf.generatedFilesBaseDir}/main/javalite"
             res.srcDirs =
                     [
                             'src/main/res/views/activities',
@@ -39,7 +47,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
@@ -59,9 +67,54 @@ dependencies {
     implementation 'ru.ztrap.iconics:core-ktx:1.0.3'
     implementation 'ru.ztrap.iconics:views-ktx:1.0.3'
     implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
+    // PROTOBUF
+    implementation 'com.google.protobuf:protobuf-lite:3.0.0'
     // TESTS
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
+
+protobuf {
+    protoc {
+        // You still need protoc like in the non-Android case
+        artifact = 'com.google.protobuf:protoc:3.0.0'
+    }
+    plugins {
+        javalite {
+            // The codegen for lite comes as a separate artifact
+            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                // In most cases you don't need the full Java output
+                // if you use the lite output.
+                remove java
+            }
+            task.plugins {
+                javalite { }
+            }
+        }
+    }
+}
+
+task copyProtobufSources(type: Copy) {
+    copy {
+        from(protobufGeneratedSource)
+        into(protobufGeneratedDestination)
+        include '**/*.java'
+    }
+}
+
+preBuild.dependsOn copyProtobufSources
+
+clean {
+    delete protobuf.generatedFilesBaseDir
+//    delete fileTree(protobufGeneratedDestination).matching {
+//        include "**/*.java"
+//    }
+}
+
