--- a/MeWSync/app/build.gradle
+++ b/MeWSync/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    // POWERMOCK
+    testImplementation "org.powermock:powermock-module-junit4:1.7.4"
+    testImplementation "org.powermock:powermock-api-mockito2:1.7.4"
 }
 
 protobuf {
