fix gitignore; remove temporary files;

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,28 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+*.o
+*.lo
+*.so
+*.d
+*.map
+*.bin
+*.elf
+*.tmp
+*.temp
+*/nbproject/*
+*.jar
+*.war
+*.ear
+*/build/*
+*.rar
+*.zip
+*.tar*
+*.iml
+*.kate-swp
+
+
+
+
+
