--- a/MeWSync/app/src/main/AndroidManifest.xml
+++ b/MeWSync/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
             android:required="true"/>
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="22"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <!--uses-permission android:name="android.permission.READ_PHONE_STATE"/-->
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -35,6 +36,7 @@
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".SimpleScannerActivity"/>
 
         <service
                 android:name=".services.BleService"
