--- a/MeWSync/app/build.gradle
+++ b/MeWSync/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "com.polidea.rxandroidble2:rxandroidble:1.8.1"
     // BARCODES
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'me.dm7.barcodescanner:zbar:1.9.13'
     // CRYPTO
     implementation 'com.madgag.spongycastle:core:1.54.0.0'
     implementation 'com.madgag.spongycastle:prov:1.54.0.0'
